--- a/src/index.css
+++ b/src/index.css
@@ -104,7 +104,7 @@ img {
 }
 
 /*for tablets*/
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1250px) {
   .container {
     width: var(--container-width-md);
   }
@@ -114,7 +114,7 @@ img {
 }
 
 /*for small devices*/
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 412px) {
   .container {
     width: var(--container-width-sm);
   }
